--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
       <div class="header-social-links d-flex">
         <a href="https://x.com/J24Environment?s=20" class="twitter"><i class="bu bi-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/james-mulolo-cert-sci-nat-94220a61" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/company/j24-environmental-resources/" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
       </div>
 
     </div>
@@ -266,80 +266,80 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
+<!-- ======= Footer ======= -->
+<footer id="footer">
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Company</h3>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-          </div>
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h3>J24 Environmental Resources</h3>
+          <p>
+            292 Furrow Road, Pretoria <br>
+            GP, 0184, South Africa<br>
+            <br><br>
+            <strong>Phone:</strong> +27 (78) 397-9095<br>
+            <strong>Email:</strong> goodsodrilzambia@gmail.com<br>
+          </p>
+        </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Development and review of Legislation, policies and strategies</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Development Extended Producer Responsibility framework</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Stakeholder engagement and mapping  </a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Digitilisation and e-governance system enabling</a></li>
-            
-            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Stakeholder engagement and mapping  </a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Training and capacity building programmes</a></li>
+        <div class="col-lg-2 col-md-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="services.html">Terms of service</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="about.html">Privacy policy</a></li>
           </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-
         </div>
+
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+          <li><i class="bx bx-chevron-right"></i> <a href="services.html">Development and review of Legislation, policies and strategies</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="services.html">Development Extended Producer Responsibility framework</a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="services.html">Stakeholder engagement and mapping  </a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="services.html">Digitilisation and e-governance system enabling</a></li>
+          
+          <li><i class="bx bx-chevron-right"></i> <a href="services.html">Stakeholder engagement and mapping  </a></li>
+          <li><i class="bx bx-chevron-right"></i> <a href="services.html">Training and capacity building programmes</a></li>
+        </ul>
+        </div>
+
+        <div class="col-lg-4 col-md-6 footer-newsletter">
+          <h4>Join Our Newsletter</h4>
+          <p>Subscribe to our newsletter and stay up-to-date on the latest environmental news and trends</p>
+          <form action="" method="post">
+            <input type="email" name="email"><input type="submit" value="Subscribe">
+          </form>
+        </div>
+
       </div>
     </div>
+  </div>
 
-    <div class="container d-md-flex py-4">
+  <div class="container d-md-flex py-4">
 
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Company</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+    <div class="me-md-auto text-center text-md-start">
+      <div class="copyright">
+        &copy; Copyright <strong><span>J24 Environmental Resources</span></strong>. All Rights Reserved
       </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="https://x.com/J24Environment?s=20" class="twitter"><i class="bu bi-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/james-mulolo-cert-sci-nat-94220a61" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/J24 Environmental Resourcesal Resourcesal Resourcesal Resourcesal Resources-free-html-bootstrap-template/ -->
+        Designed by <a href="https://digitobits-tech-trading-zambia.github.io/digitobits.com.github.io/index.html">DigitoBits</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+    <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      <a href="https://x.com/J24Environment?s=20" class="twitter"><i class="bu bi-twitter"></i></a>
+      <a href="https://www.linkedin.com/company/j24-environmental-resources/" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+    </div>
+  </div>
+</footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
