--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
           <h2>Team</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Team</li>
+            <li>Our Team</li>
           </ol>
         </div>
 
