--- a/team.html
+++ b/team.html
@@ -84,7 +84,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Team</h2>
+          <h2>Our Team</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Our Team</li>
