--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="carousel-content animate__animated animate__fadeInUp">
               
               <h2>OUR VISION</h2>
-              <p>“To emerge as the preferred firm
+              <p>To emerge as the preferred firm
                 of professionals providing
                 personalised and quality focused
                 environmental advisory services
