--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               services to all its clients at competitive pricing,
               provide safe working conditions and deliver
               quality work within reasonable time frame of
-              its clients.”
+              its clients.
               In doing so J24 Environmental Resources shall pursue best practices
               in the management and delivery of the
               required services to all its clients.</p>
@@ -137,7 +137,7 @@
                 personalised and quality focused
                 environmental advisory services
                 nationally and regionally that
-                meets clients' needs above their
+                meets clients needs above their
                 expectations at first and all the
                 times.</p>
               <div class="text-center"><a href="about.html" class="btn-get-started">Read More</a></div>
