--- a/team.html
+++ b/team.html
@@ -146,7 +146,7 @@
               quality goods and services to J24 Environment’s
               clients for them to do more in their
               business.
-              <p>Since inception, J24 Environment has built a solid business foundation, all while delivering
+              <p>Since inception, J24 Environment Resource’s has built a solid business foundation, all while delivering
                 sustainable growth in the midst of a challenging operating environment. It will continue to
                 face many challenges in its business environment. However, it is quite adept at adopting
                 change, and this has allowed it to continue on a growth trajectory. Its aim is to align its
