--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box featured">
-              <h3>How we Help</h3>
+              <h3>How we help</h3>
               
               <ul>
                 <li>• Our team members are accomplished professionals in various disciplines and have teamed up based on:
