--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>goodsodrilzambia@gmail.com</p>
+                  <p>infor@j24environment.org</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -161,7 +161,7 @@
             GP, 0184, South Africa<br>
             <br><br>
             <strong>Phone:</strong> +27 (78) 397-9095<br>
-            <strong>Email:</strong> goodsodrilzambia@gmail.com<br>
+            <strong>Email:</strong> infor@j24environment.org<br>
           </p>
         </div>
 
