--- a/assets/services.html
+++ b/assets/services.html
@@ -49,21 +49,14 @@
       <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Our Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              
-            </ul>
-          </li>
-
-          <li><a href="services.html" class="active">Services</a></li>
-          
-          <li><a href="portfolio.html">Portfolio</a></li>
+         <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html" >Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
+
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
