--- a/contact.html
+++ b/contact.html
@@ -50,20 +50,13 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html">Home</a></li>
-
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              
-            </ul>
-          </li>
-
-             <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html" >Portfolio</a></li>
-          
-          <li><a href="contact.html" class="active">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
+
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
