--- a/services.html
+++ b/services.html
@@ -53,16 +53,12 @@
 
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Our Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              
-            </ul>
-          </li>
-
-          <li><a href="services.html" class="active">Services</a></li>
-          
-          <li><a href="portfolio.html">Portfolio</a></li>
+             <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html" >Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
 
         </ul>
