--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio - Company Bootstrap Template</title>
+  <title>J24 Environmental Resources</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -76,11 +76,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio</li>
-          </ol>
+          
         </div>
 
       </div>
