--- a/team.html
+++ b/team.html
@@ -172,7 +172,7 @@
             GP, 0184, South Africa<br>
             <br><br>
             <strong>Phone:</strong> +27 (78) 397-9095<br>
-            <strong>Email:</strong> goodsodrilzambia@gmail.com<br>
+            <strong>Email:</strong> infor@j24environment.org<br>
           </p>
         </div>
 
