--- a/team.html
+++ b/team.html
@@ -132,14 +132,14 @@
               for this business and has brought that
               into the firm by ensuring every team
               member is passionate about providing
-              quality goods and services to J24 Environment Resource’s
+              quality goods and services to J24 Environment Resource
               clients for them to do more in their
               business.
-              <p>Since inception, J24 Environment Resource’s has built a solid business foundation, all while delivering
+              <p>Since inception, J24 Environment Resource has built a solid business foundation, all while delivering
                 sustainable growth in the midst of a challenging operating environment. It will continue to
                 face many challenges in its business environment. However, it is quite adept at adopting
                 change, and this has allowed it to continue on a growth trajectory. Its aim is to align its
-                actions to meet client needs. To achieve this, J24 Environment Resource’s main strategic focus is on continuous
+                actions to meet client needs. To achieve this, J24 Environment Resource main strategic focus is on continuous
                 analysis of market trends and organisational transformation. It is confident that it will
                 exceed expectations of all its stakeholders by carefully considering their interests.</p>
 
