--- a/index.html
+++ b/index.html
@@ -95,15 +95,10 @@
             <div class="carousel-content animate__animated animate__fadeInUp">
             </h3>
               <h2>OUR <span>MISSION</span></h2>
-              <p>J24 Environment Resource’s mission is to provide unique, client
-              focused, competence based professional
-              services to all its clients at competitive pricing,
-              provide safe working conditions and deliver
-              quality work within reasonable time frame of
-              its clients.
-              In doing so J24 Environmental Resources shall pursue best practices
-              in the management and delivery of the
-              required services to all its clients.</p>
+              <p>We embrace values of quality service, integrity, professionalism,
+              health, safety and success.
+              Our values are the basis for which we believe we are destined to
+              grow.</p>
               <div class="text-center"><a href="about.html" class="btn-get-started">Read More</a></div>
             </div>
           </div>
