--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
               grow.</p>
               <div class="text-center"><a href="about.html" class="btn-get-started">Read More</a></div>
             </div>
+           </div>
           </div>
         </div>
 
@@ -119,6 +120,7 @@
               grow.</p>
               <div class="text-center"><a href="about.html" class="btn-get-started">Read More</a></div>
             </div>
+              </div>
           </div>
         </div>
 
@@ -142,6 +144,7 @@
                 times.</p>
               <div class="text-center"><a href="about.html" class="btn-get-started">Read More</a></div>
             </div>
+              </div>
           </div>
         </div>
 
