--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- Slide 2 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
           <div class="carousel-container">
-            <div class="carousel-contents animate__animated animate__fadeInUp">
+            <div class="carousel-contents1 animate__animated animate__fadeInUp">
             <h2>Integrity.</h2>
             <h2>Quality.</h2>
             <h2>Sustain.</h2>
@@ -131,7 +131,7 @@
         <!-- Slide 3 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
           <div class="carousel-container">
-            <div class="carousel-contents animate__animated animate__fadeInUp">
+            <div class="carousel-contents2 animate__animated animate__fadeInUp">
             <h2>Integrity.</h2>
             <h2>Quality.</h2>
             <h2>Sustain.</h2>
