--- a/testimonials.html
+++ b/testimonials.html
@@ -95,11 +95,11 @@
           <div class="col-lg-6" data-aos="fade-up">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Dr. K. Khalema.</h3>
-              <h4>mmm&amp; ..dk</h4>
+              <h3>Mr. James Mulolo.</h3>
+              <h4>Human Resource Services&amp;k</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                We recommend Mr. James Mulolo to the utmost level work related to feasibility studies related to recycling and sustainable development of hazardous chemicals and wastes management and /or related fields.
+               We certify that Mr. James Mulolo was employed by the United Nations Industrial Development Organisations (UNIDO) as an International Consultant on Circular Economy and Sustainable POPs Chemicals & Waste Management in the Textile and Garment Value Chain in South Africa and Lesotho and recommended an intervention strategy for the development of the project “Promotion of Circular Economy in the Textile/Garment Sector through Sustainable Chemicals and Waste Management”.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -108,11 +108,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="testimonial-item mt-4 mt-lg-0">
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Ministry of Environment, Lesotho</h3>
-              <h4>D...</h4>
+              <h3>Department of Environment, Lesotho</h3>
+              <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Mr. Mulolo, I found him to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable 
+                “We found Mr. Mulolo, to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable”.
                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -162,11 +162,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="testimonial-item mt-4">
               <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
-              <h3>Emily Harison</h3>
-              <h4>Store Owner</h4>
+              <h3>Dr Motsotuoa Makoa</h3>
+             
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                J24 Environment has helped us to reduce our costs and improve our efficiency. They are a trusted partner who is always looking for ways to help us save money.
+              “J24 Environmental Resources is a valuable asset to our team. They are always up-to-date on the latest trends and developments in the industry and are always looking for ways to help us improve our operations”.
                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
