--- a/testimonials.html
+++ b/testimonials.html
@@ -95,11 +95,11 @@
           <div class="col-lg-6" data-aos="fade-up">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Mr. James Mulolo.</h3>
-              <h4>Human Resource Services&amp;k</h4>
+              <h3>Mr. Chad Hakamangwe</h3>
+              <h4>Operations Director&amp;k</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-               We certify that Mr. James Mulolo was employed by the United Nations Industrial Development Organisations (UNIDO) as an International Consultant on Circular Economy and Sustainable POPs Chemicals & Waste Management in the Textile and Garment Value Chain in South Africa and Lesotho and recommended an intervention strategy for the development of the project “Promotion of Circular Economy in the Textile/Garment Sector through Sustainable Chemicals and Waste Management”.
+                 “J24 Environment Resources has helped us to reduce our costs and improve our efficiency. They are a trusted partner who is always looking for ways to help us save money”.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -108,11 +108,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="testimonial-item mt-4 mt-lg-0">
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Department of Environment, Lesotho</h3>
+              <h3></h3>
               <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                “We found Mr. Mulolo, to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable”.
+               “Mr. Mulolo was engaged under the Government of Lesotho, United Nations Development Programme and United Nations Environment Programme partnership under the Project; “Strengthening Partnerships in Sustainable Plastic Life-Cycle Management in Lesotho” to develop the National integrated waste management strategy for Lesotho. We wish to recognise the commendable work done by the Consultant and the good cooperation demonstrated to conduct this assignment”.
                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -135,12 +135,11 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="testimonial-item mt-4">
               <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <h3>AST Recycling</h3>
+              <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                J24 Environment has helped us to grow our business significantly over the past few years. They are experts in their field and have provided us with valuable guidance and support.
-                  
+                “J24 Environmental Resources has helped us to grow our business significantly over the past few years. They are experts in their field and have provided us with valuable guidance and support. J24 Environmental Resources is a reliable and trustworthy partner. They have a deep understanding of the waste management industry and are always willing to go the extra mile to help their clients succeed”.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -149,12 +148,12 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="testimonial-item mt-4">
               <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
+              <h3>Formerly Program Officer, Africa Institute</h3>
+              <h4>Dr. Koebu Khalema</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                J24 Environment is a valuable asset to our team. They are always up-to-date on the latest trends and developments in the industry and are always looking for ways to help us improve our operations.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                “We recommend Mr. Mulolo to the utmost level work related to feasibility studies related to recycling and sustainable development of hazardous chemicals and wastes management and /or related fields”.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
           </div>
@@ -162,12 +161,12 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="testimonial-item mt-4">
               <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
-              <h3>Dr Motsotuoa Makoa</h3>
-             
+              <h3>Department of Environment</h3>
+             <h4>Lesotho</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              “J24 Environmental Resources is a valuable asset to our team. They are always up-to-date on the latest trends and developments in the industry and are always looking for ways to help us improve our operations”.
-                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                “We found Mr. Mulolo, to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable”.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
           </div>
