--- a/testimonials.html
+++ b/testimonials.html
@@ -99,7 +99,7 @@
               <h4>Operations Director&amp;k</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                 “J24 Environment Resources has helped us to reduce our costs and improve our efficiency. They are a trusted partner who is always looking for ways to help us save money”.
+                 J24 Environment Resources has helped us to reduce our costs and improve our efficiency. They are a trusted partner who is always looking for ways to help us save money.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -112,7 +112,7 @@
               <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-               “Mr. Mulolo was engaged under the Government of Lesotho, United Nations Development Programme and United Nations Environment Programme partnership under the Project; “Strengthening Partnerships in Sustainable Plastic Life-Cycle Management in Lesotho” to develop the National integrated waste management strategy for Lesotho. We wish to recognise the commendable work done by the Consultant and the good cooperation demonstrated to conduct this assignment”.
+               Mr. Mulolo was engaged under the Government of Lesotho, United Nations Development Programme and United Nations Environment Programme partnership under the Project; “Strengthening Partnerships in Sustainable Plastic Life-Cycle Management in Lesotho” to develop the National integrated waste management strategy for Lesotho. We wish to recognise the commendable work done by the Consultant and the good cooperation demonstrated to conduct this assignment.
                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -139,7 +139,7 @@
               <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                “J24 Environmental Resources has helped us to grow our business significantly over the past few years. They are experts in their field and have provided us with valuable guidance and support. J24 Environmental Resources is a reliable and trustworthy partner. They have a deep understanding of the waste management industry and are always willing to go the extra mile to help their clients succeed”.
+                J24 Environmental Resources has helped us to grow our business significantly over the past few years. They are experts in their field and have provided us with valuable guidance and support. J24 Environmental Resources is a reliable and trustworthy partner. They have a deep understanding of the waste management industry and are always willing to go the extra mile to help their clients succeed.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -152,7 +152,7 @@
               <h4>Dr. Koebu Khalema</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                “We recommend Mr. Mulolo to the utmost level work related to feasibility studies related to recycling and sustainable development of hazardous chemicals and wastes management and /or related fields”.
+                We recommend Mr. Mulolo to the utmost level work related to feasibility studies related to recycling and sustainable development of hazardous chemicals and wastes management and /or related fields.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -165,7 +165,7 @@
              <h4>Lesotho</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                “We found Mr. Mulolo, to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable”.
+                We found Mr. Mulolo, to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
