--- a/testimonials.html
+++ b/testimonials.html
@@ -96,7 +96,7 @@
               <h4>Operations Director</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                J24 Environment has helped us to reduce our costs and improve our efficiency. They are a trusted partner who is always looking for ways to help us save money.
+                J24 Environment Resources has helped us to reduce our costs and improve our efficiency. They are a trusted partner who is always looking for ways to help us save money.
                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -109,7 +109,7 @@
               <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                J24 Environment has helped us to grow our business significantly over the past few years. They are experts in their field and have provided us with valuable guidance and support.
+                J24 Environment Resources has helped us to grow our business significantly over the past few years. They are experts in their field and have provided us with valuable guidance and support.
                   
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
@@ -181,7 +181,7 @@
               <h4></h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Mr. Mulolo, We found him to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable 
+                We found Mr. Mulolo, to be a man of Integrity, Professionalism and one that respected diversity. He is astute for results and accountability, team and client oriented. His skills in managing people and performance as well as judgment and decision making is impeccable
                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
